--- a/skill.toml
+++ b/skill.toml
@@ -1,55 +1,45 @@
-# کانفیگ مهارت‌ها برای پروژه Persian Tools
+# Persian Tools Skill Configuration (Refined)
 
 [skills]
-# تعریف مهارت‌ها و تخصص‌های مختلف برای پروژه
-project_architect = "معمار پروژه"
-project_engineer = "مهندس پروژه"
-ui_ux_specialist = "متخصص UI/UX"
-seo_specialist = "متخصص SEO"
-full_stack_web_developer = "متخصص برنامه‌نویسی فول استک وب"
+engineering_lead = "رهبر مهندسی"
+quality_engineer = "مهندس کیفیت"
+ux_accessibility = "متخصص UX و دسترس‌پذیری"
+performance_engineer = "مهندس کارایی"
+devops_engineer = "مهندس DevOps"
+security_privacy = "متخصص امنیت و حریم خصوصی"
+seo_content = "متخصص SEO و محتوا"
 
-[skills.project_architect]
-description = "طراحی و معماری ساختار کلی پروژه، انتخاب فناوری‌های مناسب و تصمیم‌گیری‌های بلندمدت."
-responsibilities = ["انتخاب فناوری‌ها", "تعریف معماری سیستم", "مدیریت نیازمندی‌ها", "رصد و اصلاح معماری پروژه"]
-required_knowledge = ["معماری نرم‌افزار", "مدیریت پروژه", "طراحی سیستم‌های مقیاس‌پذیر"]
+[skills.engineering_lead]
+description = "هدایت فنی، هم‌راستایی استانداردها، و تصمیم‌گیری‌های معماری."
+responsibilities = ["حفظ اصول local‑first", "تضمین RTL و WCAG", "بازبینی معماری", "هماهنگی مستندات با کد"]
+required_knowledge = ["Next.js", "TypeScript", "معماری محصول", "پروسه‌های کیفیت"]
 
-[skills.project_engineer]
-description = "پیاده‌سازی جزئیات فنی پروژه، همکاری با تیم‌های توسعه و انجام پیاده‌سازی‌های اصلی."
-responsibilities = ["برنامه‌ریزی فنی", "مدیریت تیم‌های توسعه", "تضمین کیفیت فنی"]
-required_knowledge = ["مهندسی نرم‌افزار", "مدیریت پروژه", "توسعه وب"]
+[skills.quality_engineer]
+description = "کنترل کیفیت، تست و استانداردسازی تغییرات."
+responsibilities = ["تعریف QA gates", "پوشش تست", "نظارت بر رگرسیون", "خروجی گزارش کیفیت"]
+required_knowledge = ["Vitest", "Playwright", "TypeScript strict", "CI"]
 
-[skills.ui_ux_specialist]
-description = "طراحی و بهبود تجربه کاربری، طراحی رابط‌های کاربری و تعاملات."
-responsibilities = ["طراحی UI", "ایجاد تجربه کاربری روان", "رعایت استانداردهای دسترسی‌پذیری", "بازخورد و ارزیابی تجربه کاربری"]
-required_knowledge = ["طراحی رابط کاربری", "اصول تجربه کاربری", "ابزارهای طراحی (مثل Figma, Sketch)"]
+[skills.ux_accessibility]
+description = "بهینه‌سازی تجربه کاربری و دسترس‌پذیری RTL."
+responsibilities = ["بازبینی RTL", "بهبود فرم‌ها", "اجرای WCAG AA", "کنترل کنتراست"]
+required_knowledge = ["WCAG 2.1", "RTL design", "Semantic HTML"]
 
-[skills.seo_specialist]
-description = "بهینه‌سازی موتور جستجو برای بهبود رتبه سایت در نتایج جستجو."
-responsibilities = ["تحلیل و بهبود SEO سایت", "تحقیق کلمات کلیدی", "تجزیه و تحلیل رقبا", "ایجاد و بهینه‌سازی محتوای سایت"]
-required_knowledge = ["SEO on-page and off-page", "تحلیل کلمات کلیدی", "ابزارهای SEO (مثل Google Analytics, SEMrush)"]
+[skills.performance_engineer]
+description = "بهبود سرعت و تجربه آفلاین."
+responsibilities = ["بهینه‌سازی مسیرهای اصلی", "Core Web Vitals", "PWA lifecycle"]
+required_knowledge = ["Lighthouse", "Service Worker", "Web Vitals"]
 
-[skills.full_stack_web_developer]
-description = "توسعه‌دهنده فول استک برای طراحی، پیاده‌سازی و نگهداری بخش‌های مختلف پروژه."
-responsibilities = ["طراحی رابط کاربری", "توسعه Backend و Frontend", "یکپارچگی APIها", "مدیریت دیتابیس"]
-required_knowledge = ["HTML, CSS, JavaScript", "Node.js, Python, Django, React", "SQL, PostgreSQL", "CI/CD, Git"]
+[skills.devops_engineer]
+description = "پایداری استقرار و بهبود CI/CD."
+responsibilities = ["CI/CD برای lint/test", "نسخه‌دهی و استقرار", "ابزارهای release"]
+required_knowledge = ["pnpm", "GitHub Actions", "Release management"]
 
-[skills.additional_skills]
-# در صورت نیاز به مهارت‌های اضافی می‌توان اضافه کرد
-mobile_developer = "متخصص توسعه موبایل"
-devops_specialist = "متخصص DevOps"
-cloud_computing_expert = "متخصص محاسبات ابری"
+[skills.security_privacy]
+description = "سیاست‌های امنیت و حریم خصوصی."
+responsibilities = ["CSP و nonce", "Opt‑in analytics/ads", "کنترل ذخیره‌سازی محلی"]
+required_knowledge = ["CSP", "Privacy by default", "Threat modeling"]
 
-[skills.mobile_developer]
-description = "توسعه اپلیکیشن‌های موبایل برای پلتفرم‌های مختلف."
-responsibilities = ["توسعه اپلیکیشن‌های iOS/Android", "یکپارچگی APIها", "بهینه‌سازی عملکرد موبایل"]
-required_knowledge = ["Swift, Kotlin", "React Native", "Firebase, Xcode, Android Studio"]
-
-[skills.devops_specialist]
-description = "پیاده‌سازی و مدیریت فرآیندهای DevOps برای استقرار خودکار و بهینه‌سازی زیرساخت."
-responsibilities = ["مدیریت CI/CD", "تست خودکار", "مدیریت منابع سرور"]
-required_knowledge = ["Docker, Kubernetes", "AWS, Azure", "CI/CD tools like Jenkins, GitLab CI"]
-
-[skills.cloud_computing_expert]
-description = "طراحی و پیاده‌سازی سیستم‌های مبتنی بر محاسبات ابری."
-responsibilities = ["مدیریت منابع ابری", "پیاده‌سازی معماری ابری مقیاس‌پذیر", "انتقال داده‌ها به ابرا"]
-required_knowledge = ["AWS, GCP, Azure", "Serverless Architecture", "Cloud Security Best Practices"]
+[skills.seo_content]
+description = "SEO و استراتژی محتوایی."
+responsibilities = ["داده‌های ساخت‌یافته", "Meta/OG", "پایش کلیدواژه‌های فارسی"]
+required_knowledge = ["schema.org", "SEO technical", "Content strategy"]
